# xcallserv

./: CMakeLists.txt  README.markdown
geelyconfig/config/: Telematics_16000hz.tsf  Telematics_8000hz.tsf
resource/dbus-1/system.d/: com.lge.xcallservice.conf
resource/systemd/system/: temxcallservice.service
src/: CMakeLists.txt  commontypes.h  gstlgecnr.cpp  gstlgecnr.h  gstlgecnrprobe.c  gstlgecnrprobe.h  lgecnradapter.cpp  lgecnradapter.h  xCallMain.cpp
src/interface/: dbus_xcall_interface.c  dbus_xcall_interface.h  xcallservice.fidl  xcallservice.xml
src/logger/: Log.h  xcallservice_logger.cpp  xcallservice_logger.h
src/manager/: xcall_error.h  xcall_export.h  xcall_manager.cpp  xcall_manager.h
src/pipeline/: abstract_pipeline.h  unittest_mic_pipeline.cpp  unittest_mic_pipeline.h  unittest_rtpVoice_pipeline.cpp  unittest_rtpVoice_pipeline.h  unittest_spk_pipeline.cpp  unittest_spk_pipeline.h  voicecall_pipeline.cpp  voicecall_pipeline.h
src/player/: ObjectFactory.h  PlayerFactory.h  Singleton.h  abstract_player.h  unittest_mic_player.cpp  unittest_mic_player.h  unittest_rtpVoice_player.cpp  unittest_rtpVoice_player.h  unittest_spk_player.cpp  unittest_spk_player.h  voicecall_player.cpp  voicecall_player.h
src/service/: xcall_debug.h  xcall_service_client.cpp  xcall_service_client.h  xcall_service_server.cpp  xcall_service_server.h
xcalltestapp/: CMakeLists.txt
xcalltestapp/src/: CMakeLists.txt  main.cpp  xcallcommonutils.h  xcalltest.cpp  xcalltest.h
